# togglenote

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: resources.qrc
packaging/: Info.plist  cmake_uninstall.cmake.in  com.togglenote.ToggleNote.metainfo.xml  togglenote.desktop  togglenote.icns
src/app/: Application.cpp  Application.h  CommandLineArgs.cpp  CommandLineArgs.h  CurrentProcessManager.cpp  CurrentProcessManager.h  NoteManager.cpp  NoteManager.h  OsSignalHandler.cpp  OsSignalHandler.h  Paths.cpp  Paths.h  ThemeUtils.cpp  ThemeUtils.h  constants.h  main.cpp  resources.rc
src/core/: ActionDefinition.cpp  ActionDefinition.h  ActionId.cpp  ActionId.h  ButtonId.h  Icon.h  Note.cpp  Note.h  Settings.cpp  Settings.h
src/design/: Design.cpp  Design.h  theme.qss
src/infra/: NoteFileRepository.cpp  NoteFileRepository.h  SettingsRepository.cpp  SettingsRepository.h
src/ports/: IKeybindingConfiguration.h  IKeybindingProvider.h  INoteController.h  INoteRepository.h  INoteService.h  ISettingsProvider.h  ISettingsRepository.h  IToolbarController.h
src/presentation/: NoteViewModel.cpp  NoteViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h
src/services/: GlobalHotkeyService.cpp  GlobalHotkeyService.h  GlobalHotkeyService_mac.cpp  GlobalHotkeyService_win.cpp  GlobalHotkeyService_x11.cpp  KeybindingService.cpp  KeybindingService.h  NoteService.cpp  NoteService.h  SettingsService.cpp  SettingsService.h
src/ui/common/: AlwaysOnTopManager.cpp  AlwaysOnTopManager.h  BaseDialog.cpp  BaseDialog.h  FramelessWindow.cpp  FramelessWindow.h  Icons.cpp  Icons.h  TitleBar.cpp  TitleBar.h  TrayIcon.cpp  TrayIcon.h
src/ui/note/: AutohideController.cpp  AutohideController.h  ClickThroughManager.cpp  ClickThroughManager.h  ClickThroughManager_mac.mm  ClickThroughManager_win.cpp  ClickThroughManager_x11.cpp  CornerButton.cpp  CornerButton.h  GhostIndicator.cpp  GhostIndicator.h  LockButton.cpp  LockButton.h  NoteController.cpp  NoteController.h  NoteEditor.cpp  NoteEditor.h  NoteSettingsController.cpp  NoteSettingsController.h  NoteSettingsDialog.cpp  NoteSettingsDialog.h  NoteWindow.cpp  NoteWindow.h  PinButton.cpp  PinButton.h  SearchBar.cpp  SearchBar.h  ToolbarController.cpp  ToolbarController.h  WindowGeometryHelper.cpp  WindowGeometryHelper.h
src/ui/settings/: ColorGridDialog.cpp  ColorGridDialog.h  ColorRow.cpp  ColorRow.h  CustomColorDialog.cpp  CustomColorDialog.h  FontFamilyRow.cpp  FontFamilyRow.h  KeybindingsPage.cpp  KeybindingsPage.h  ResettableRow.cpp  ResettableRow.h  SettingsDialog.cpp  SettingsDialog.h  SettingsRowUtils.cpp  SettingsRowUtils.h  SliderSpinRow.cpp  SliderSpinRow.h  SpinRow.cpp  SpinRow.h
src/ui/toolbar/: ContextMenu.cpp  ContextMenu.h  ToolbarButton.h  ToolbarWidget.cpp  ToolbarWidget.h
